--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2"
   },
   "scripts": {
