--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
